add back center text style

--- a/style.css
+++ b/style.css
@@ -63,6 +63,10 @@ label {
 	display: inline-block;
 }
 
+.centertext {
+	text-align: center;
+}
+
 .outerborder {
 	overflow: hidden;
 	border-style: solid;
