--- a/css/adminstyle.css
+++ b/css/adminstyle.css
@@ -11,7 +11,6 @@
 	display: block;
 	margin:0 1px 1px 0;
 	float: left;
-	border:1px solid;
 	min-width:90px;
 	text-align: center;
 	white-space: nowrap;
@@ -31,11 +30,17 @@
 	flex-grow:1;
 	-webkit-flex-shrink: 0;
 	flex-shrink: 0;
+	-webkit-flex-basis:90px;
+	flex-basis:90px;
 }
 
 .flex-box a {
 	display: block;
 	padding:0.2em 0;
+	border:1px solid;
+}
+*html .flex-box a {
+	zoom:1;
 }
 
 
