--- a/css/grayblue/adminstyle.css
+++ b/css/grayblue/adminstyle.css
@@ -1,17 +1,17 @@
 .flex-box ul,
 .flex-box li {
-	border-color:#6699cc;
+	border-color:#69c;
 }
 
 .flex-box a {
 	border-color:#ccc;
 }
 .flex-box a:hover {
-	border-color:#6699cc;
+	border-color:#69c;
 	background-color:#f7f8f9;
 }
 
 
 .detail-item {
-	border-color:#6699cc;
+	border-color:#69c;
 }
