--- a/css/lightgreen/style.css
+++ b/css/lightgreen/style.css
@@ -1,29 +1,17 @@
 body {
-	color: #000000;
-	background-color: #ffffff;
+	color: #000;
+	background-color: #fff;
 	background-image: url(../../image/bg_green.jpg);
 }
 
-a:link {
-	color: #000000;
-}
-
-a:visited {
-	color: #000000;
-}
-
-a:active {
-	color: #000000;
-}
-
-a:hover {
-	color: #000000;
+a {
+	color: #000;
 }
 
 textarea, input, select {
 	border-color: #56c556;
-	color: #000000;
-	background-color: #ffffff;
+	color: #000;
+	background-color: #fff;
 }
 
 .outerborder {
@@ -33,29 +21,29 @@ textarea, input, select {
 }
 
 .header {
-	color: #000000;
-	background-color: #eeffee;
+	color: #000;
+	background-color: #efe;
 	background-image: url(../../image/bar_top_green.gif);
 }
 
 .guest-functions .aside .function {
-	border-color: #000000;
+	border-color: #000;
 }
 
 .topic {
 	border-color: #56c556;
-	background-color: #eeffee;
+	background-color: #efe;
 }
 
 .topic .message {
 	border-color: #56c556;
-	color: #000000;
+	color: #000;
 }
 
 .topic .info {
-	color: #000000;
+	color: #000;
 	border-color: #56c556;
-	background-color: #eeffee;
+	background-color: #efe;
 	background-image: none;
 }
 
@@ -65,7 +53,7 @@ textarea, input, select {
 
 .topic .title {
 	border-color: #56c556;
-	color: #000000;
+	color: #000;
 	background-color: #008000;
 	background-image: url(../../image/bar_green.gif);
 }
@@ -76,17 +64,17 @@ textarea, input, select {
 }
 
 .topic .inner-message .summary {
-	color: #000000;
+	color: #000;
 	border-color: #56c556;
 }
 
 .topic .admin-message .title,
 .topic .admin-message .summary {
-	color: #000000;
+	color: #000;
 }
 
 .topic .admin-message .words {
-	color: #000000;
+	color: #000;
 }
 
 .topic .outer-hint {
@@ -99,7 +87,7 @@ textarea, input, select {
 
 .topic-list {
 	border-color: #56c556;
-	background-color: #eeffee;
+	background-color: #efe;
 }
 
 .topic-list tbody tr:hover td {
@@ -112,20 +100,20 @@ textarea, input, select {
 }
 
 .topic-list th {
-	color: #000000;
+	color: #000;
 	background-color: #008000;
 	background-image: url(../../image/bar_green.gif);
 }
 
 .region {
 	border-color: #56c556;
-	color: #000000;
-	background-color: #eeffee;
+	color: #000;
+	background-color: #efe;
 }
 
 .region .title {
 	border-color: #56c556;
-	color: #000000;
+	color: #000;
 	background-color: #008000;
 	background-image: url(../../image/bar_green.gif);
 }
@@ -140,7 +128,7 @@ textarea, input, select {
 }
 
 .page-list .nav a {
-	border-color: #eeffee;
+	border-color: #efe;
 }
 
 .page-list .nav a:hover {
@@ -153,8 +141,8 @@ textarea, input, select {
 .page-list .pagenum:visited,
 .page-list .pagenum:active,
 .page-list .pagenum:hover {
-	border-color: #eeffee;
-	color: #000000;
+	border-color: #efe;
+	color: #000;
 }
 
 .page-list .pagenum:hover {
@@ -167,7 +155,7 @@ textarea, input, select {
 .page-list .pagenum-current:visited,
 .page-list .pagenum-current:active,
 .page-list .pagenum-current:hover {
-	color: #ff0000;
+	color: red;
 }
 
 .tab-outer-container .tab-title-container {
@@ -179,29 +167,29 @@ textarea, input, select {
 	border-bottom-color: #56c556;
 }
 
-*html .tab-outer-container .tab-title {
-	border-color: #eeffee;
+* html .tab-outer-container .tab-title {
+	border-color: #efe;
 	border-bottom-color: #56c556;
 }
 
 .tab-outer-container .tab-title-selected {
 	border-color: #56c556;
 	border-bottom-color: transparent;
-	background-color: #eeffee;
+	background-color: #efe;
 }
 
-*html .tab-outer-container .tab-title-selected {
+* html .tab-outer-container .tab-title-selected {
 	border-color: #56c556;
-	border-bottom-color: #eeffee;
+	border-bottom-color: #efe;
 }
 
-*+html .tab-outer-container .tab-title-selected {
-	border-bottom-color: #eeffee;
+* + html .tab-outer-container .tab-title-selected {
+	border-bottom-color: #efe;
 }
 
 .ubbtoolbar .ubbbutton,
 .ubbtoolbar .ubbface {
-	border-color: #eeffee;
+	border-color: #efe;
 }
 
 .ubbtoolbar .ubbbutton:hover,
