--- a/css/silver/style.css
+++ b/css/silver/style.css
@@ -1,29 +1,17 @@
 body {
-	color: #000000;
+	color: #000;
 	background-color: #efeff7;
 	background-image: url(../../image/bg_grey.gif);
 }
 
-a:link {
-	color: #000000;
-}
-
-a:visited {
-	color: #000000;
-}
-
-a:active {
-	color: #000000;
-}
-
-a:hover {
-	color: #000000;
+a {
+	color: #000;
 }
 
 textarea, input, select {
 	border-color: #aea8bf;
-	color: #000000;
-	background-color: #ffffff;
+	color: #000;
+	background-color: #fff;
 }
 
 .outerborder {
@@ -33,13 +21,13 @@ textarea, input, select {
 }
 
 .header {
-	color: #000000;
-	background-color: #ffffff;
+	color: #000;
+	background-color: #fff;
 	background-image: url(../../image/bar_top_grey.gif);
 }
 
 .guest-functions .aside .function {
-	border-color: #000000;
+	border-color: #000;
 }
 
 .topic {
@@ -49,11 +37,11 @@ textarea, input, select {
 
 .topic .message {
 	border-color: #aea8bf;
-	color: #000000;
+	color: #000;
 }
 
 .topic .info {
-	color: #000000;
+	color: #000;
 	border-color: #aea8bf;
 	background-color: #e7e3ef;
 	background-image: none;
@@ -65,7 +53,7 @@ textarea, input, select {
 
 .topic .title {
 	border-color: #aea8bf;
-	color: #000000;
+	color: #000;
 	background-color: #bdbece;
 	background-image: url(../../image/bar_grey.gif);
 }
@@ -76,17 +64,17 @@ textarea, input, select {
 }
 
 .topic .inner-message .summary {
-	color: #000000;
+	color: #000;
 	border-color: #aea8bf;
 }
 
 .topic .admin-message .title,
 .topic .admin-message .summary {
-	color: #000000;
+	color: #000;
 }
 
 .topic .admin-message .words {
-	color: #000000;
+	color: #000;
 }
 
 .topic .outer-hint {
@@ -112,20 +100,20 @@ textarea, input, select {
 }
 
 .topic-list th {
-	color: #000000;
+	color: #000;
 	background-color: #bdbece;
 	background-image: url(../../image/bar_grey.gif);
 }
 
 .region {
 	border-color: #aea8bf;
-	color: #000000;
+	color: #000;
 	background-color: #e7e3ef;
 }
 
 .region .title {
 	border-color: #aea8bf;
-	color: #000000;
+	color: #000;
 	background-color: #bdbece;
 	background-image: url(../../image/bar_grey.gif);
 }
@@ -154,7 +142,7 @@ textarea, input, select {
 .page-list .pagenum:active,
 .page-list .pagenum:hover {
 	border-color: #e7e3ef;
-	color: #000000;
+	color: #000;
 }
 
 .page-list .pagenum:hover {
@@ -167,7 +155,7 @@ textarea, input, select {
 .page-list .pagenum-current:visited,
 .page-list .pagenum-current:active,
 .page-list .pagenum-current:hover {
-	color: #ff0000;
+	color: red;
 }
 
 .tab-outer-container .tab-title-container {
@@ -179,7 +167,7 @@ textarea, input, select {
 	border-bottom-color: #aea8bf;
 }
 
-*html .tab-outer-container .tab-title {
+* html .tab-outer-container .tab-title {
 	border-color: #e7e3ef;
 	border-bottom-color: #aea8bf;
 }
@@ -190,12 +178,12 @@ textarea, input, select {
 	background-color: #e7e3ef;
 }
 
-*html .tab-outer-container .tab-title-selected {
+* html .tab-outer-container .tab-title-selected {
 	border-color: #aea8bf;
 	border-bottom-color: #e7e3ef;
 }
 
-*+html .tab-outer-container .tab-title-selected {
+* + html .tab-outer-container .tab-title-selected {
 	border-bottom-color: #e7e3ef;
 }
 
