--- a/asset/css/adminstyle.css
+++ b/asset/css/adminstyle.css
@@ -44,17 +44,25 @@
 }
 
 
-input.longtext {
+input.longtext,
+select.longtext
+{
 	width:100%;
 }
-*html input.longtext {
+*html input.longtext,
+*html select.longtext
+{
 	width:90%;
 }
-*+html input.longtext {
+*+html input.longtext,
+*+html select.longtext
+{
 	width:99%;
 }
 .region-longtext input[type=text],
-.region-longtext input[type=password] {
+.region-longtext input[type=password],
+.region-longtext select
+{
 	width:100%;
 }
 
